# hestia_config

./: .env.adr0024  .env.sample  .git.backup-20250924-161415  .gitignore  .ha-probe.20251008T101103Z  .ha-probe.20251008T101136Z  .hygiene_smoke  .markdownlint.jsonc  .pre-commit-config.yaml  .yamllint.yml  CHANGELOG.md  Dockerfile  Dockerfile.bak  HA-Live.code-workspace  INFRA_ONLY_MODE_SUCCESS.md  Makefile  PR_BODY_chore-parameterize-ha-mount.md  PR_BODY_meta-capture-v1.0.0.md  README.md  SECURITY_NOTICE.md  WORKFLOW_HARDENING_COMPLETE.md  WORKFLOW_V2.6_DEPLOYMENT_SUCCESS.md  acceptance_criteria.yaml  appdaemon.yaml  automations.yaml  bootstrap_lineage_guardian.sh.bak-20251018  build.yaml  config-lean.code-workspace  config-no-git.code-workspace  config.code-workspace  config.code-workspace.bak.20250909160532  config.yaml  configuration.yaml  copilot_diagnostic_collector.sh  coverage.json  customize.yaml  diagnostics.jinja  manifest_20250915_171039.txt  monitor_appdaemon_startup.sh  new_token.json  (+23 more)
.ci-config/: config
.devcontainer/: devcontainer.json
.git.DISABLED/: COMMIT_EDITMSG  HEAD  ORIG_HEAD  config  index  packed-refs
.githooks/: pre-commit  pre-commit-adr-0016  pre-commit-adr-0016-wrapper  pre-commit-storage-guard
.github/: adr0018_allowlist.txt  copilot-instructions.md
.vscode-configs/: README.md  config-lean.sample.code-workspace
.workspace/: config_index.json  config_index.md  config_index.yaml  governance_index.json  governance_index.md  knowledge_base_index.json  knowledge_base_index.md
_migrated_conflicts_20250830_170921Z/: Dockerfile.root  config.yaml.root
addon/: Makefile  run.sh
appdaemon/: DEPRECATED.md
apps/: apps.yaml  room_db_updater.py
bb8_core/: addon_config.py  auto_detect.py  bb8_presence_scanner.py  ble_gateway.py  main.py  (+12 more)
hestia/tools/validators/adr_lint/: pyproject.toml  rules.py
hestia/tools/validators/adr_lint/.github/workflows/: adr_lint.yml
hestia/tools/validators/adr_lint/src/hestia/tools/adr_lint/: cli.py  report.py
hestia/tools/validators/adr_lint/tests/: test_rules.py
hestia/workspace/archive/bleedthrough/20251006T132217Z/: pyproject.toml
lineage_guardian_bundle_20251016_152518/: README.md  pyproject.toml
lineage_guardian_bundle_20251016_152518/config/snippets/: hestia.toml.patch
lineage_guardian_bundle_20251016_152518/lineage_guardian/: graph_integrity_checker.py  graph_scanner.py  lineage_corrector.py  lineage_report.py  lineage_validator.py  models.py  utils.py
lineage_guardian_bundle_20251016_152518/prompts/: COPILOT_GUIDE.md
lineage_guardian_bundle_20251016_152518/tests/: test_utils_smoke.py
(+1322 files in other folders)
