[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hestia-lineage-guardian"
version = "0.1.0"
description = "Validate and correct lineage metadata across Home Assistant template YAMLs"
requires-python = ">=3.10"
dependencies = [
"ruamel.yaml>=0.18.6",
"pyyaml>=6.0.1",
"networkx>=3.2.1"
]
