[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hestia-adr-lint"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["python-frontmatter>=1.0.0"]

[project.optional-dependencies]
test = ["pytest>=7.4", "pytest-cov>=4.1"]

[project.scripts]
hestia-adr-lint = "hestia.tools.adr_lint.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["hestia.tools.adr_lint"]
[tool.poetry]
name = "hestia-adr-lint"
version = "0.1.0"
description = "Prototype ADR linter"
authors = ["Hestia <noreply@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
python-frontmatter = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
