[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hestia-adr-lint"
version = "0.1.0"
description = "ADR linter for Hestia (ADR-0009 & ADR-0015 enforcement)"
requires-python = ">=3.10"
dependencies = ["python-frontmatter>=1.0.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["hestia*"]
exclude = ["tests*", "docs*", "www*", "tts*", "deps*", "themes*", "tmp*", "staging*", "archive*", "artifacts*"]

[project.optional-dependencies]
test = ["pytest>=7.4", "pytest-cov>=4.1"]

[project.scripts]
hestia-adr-lint = "hestia.tools.adr_lint.cli:main"
[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["www", "tts", ".storage", "reports", "hestia/diagnostics", "hestia/work"]
[tool.ruff.lint]
select = ["E","F","I"]         # basic pyflakes/pycodestyle + isort

[tool.isort]
profile = "black"
line_length = 100
# Exclude directories that should not be modified
skip_glob = [
    "custom_components/**",
    "deps/**", 
    "www/**",
    "tts/**",
    ".storage/**",
    ".venv*/**",
    "zigbee2mqtt/**",
    "reports/**",
    "tmp/**"
]
# Only process Hestia-related Python files and core config
include_trailing_comma = true
multi_line_output = 3
known_first_party = ["hestia"]
